# breakout

./: Cargo.toml
src/: game.rs  loading.rs  main.rs  menu.rs
src/game/: balls.rs  bricks.rs  config.rs  gameover.rs  mod.rs  paddle.rs  pause.rs  walls.rs
