[package]
name = "breakout"
version = "0.1.0"
authors = ["Betovsky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy_kira_audio/wav", "bevy_kira_audio/mp3"]

[dependencies]
bevy = "0.5"
rand = "0.8.3"
bevy_kira_audio = "0.4.0"
